# msg_inspector

./: Cargo.toml  README.md
src/: lib.rs  panel.rs  picking.rs  prelude.rs  state.rs  viewport.rs
src/tabs/: assets.rs  diagnostics.rs  game_view.rs  hierarchy.rs  inspector.rs  mod.rs  resources.rs
tests/: integration_tests.rs
